syntax = "proto3";

package mono.v1;

option go_package = "github.com/rezkam/mono/api/proto/monov1;monov1";

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

service MonoService {
  rpc CreateList (CreateListRequest) returns (CreateListResponse) {
    option (google.api.http) = {
      post: "/v1/lists"
      body: "*"
    };
  }
  
  rpc GetList (GetListRequest) returns (GetListResponse) {
    option (google.api.http) = {
      get: "/v1/lists/{id}"
    };
  }

  rpc CreateItem (CreateItemRequest) returns (CreateItemResponse) {
      option (google.api.http) = {
        post: "/v1/lists/{list_id}/items"
        body: "*"
      };
  }

  rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse) {
      option (google.api.http) = {
          patch: "/v1/lists/{list_id}/items/{item.id}"
          body: "*"
      };
  }

  rpc ListLists (ListListsRequest) returns (ListListsResponse) {
    option (google.api.http) = {
        get: "/v1/lists"
    };
  }

  // ListTasks retrieves tasks with filtering and sorting support.
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse) {
    option (google.api.http) = {
        get: "/v1/tasks"
    };
  }
}

message TodoItem {
    string id = 1;
    string title = 2 [(buf.validate.field).string.min_len = 1];
    bool completed = 3;
    google.protobuf.Timestamp create_time = 4;
    google.protobuf.Timestamp due_time = 5;
    repeated string tags = 6;
}

message TodoList {
    string id = 1;
    string title = 2 [(buf.validate.field).string.min_len = 1];
    repeated TodoItem items = 3;
    google.protobuf.Timestamp create_time = 4;
}

message CreateListRequest {
    string title = 1 [(buf.validate.field).string.min_len = 1];
}

message CreateListResponse {
    TodoList list = 1;
}

message GetListRequest {
    string id = 1 [(buf.validate.field).string.min_len = 1];
}

message GetListResponse {
    TodoList list = 1;
}

message CreateItemRequest {
    string list_id = 1 [(buf.validate.field).string.min_len = 1];
    string title = 2 [(buf.validate.field).string.min_len = 1];
    google.protobuf.Timestamp due_time = 3;
    repeated string tags = 4;
}

message CreateItemResponse {
    TodoItem item = 1;
}

message UpdateItemRequest {
    string list_id = 1 [(buf.validate.field).string.min_len = 1];
    TodoItem item = 2 [(buf.validate.field).required = true];
    google.protobuf.FieldMask update_mask = 3;
}

message UpdateItemResponse {
    TodoItem item = 1;
}

message ListListsRequest {}

message ListListsResponse {
    repeated TodoList lists = 1;
}

message ListTasksRequest {
  // Optional: Parent list to filter by. If empty, search globally.
  string parent = 1;
  int32 page_size = 2;
  string page_token = 3;
  // AIP-160 filtering (e.g. "manual filter").
  string filter = 4;
  // AIP-132 sorting (e.g. "create_time desc").
  string order_by = 5;
}

message ListTasksResponse {
  repeated TodoItem items = 1;
  string next_page_token = 2;
}
